--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Minuti mancanti</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 id="title"></h1>
-
+    <div class="flex-container">
+      <h1 id="title"></h1>
+    </div>
     
     <script type="text/javascript" src="main.js"></script>
   </body>
